<resources>
    <string name="app_name">Fill the squares</string>
    <string name="playButton">Play</string>
    <string name="chooseYourGameTextView">Choose your game</string>
    <string name="classicGame6x6Board">Classic - 6x6</string>
    <string name="classicGame8x8Board">Classic - 8x8</string>
    <string name="gameDefaultScore">0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="squareDefaultValue">\?</string>
    <string name="mainMenuButton">Menu</string>
    <string name="newGameButton">New game</string>
    <string name="playingGameState">Playing</string>
    <string name="gameWonState">You win</string>
    <string name="gameLostState">You lose</string>
    <string name="loadingText">Loading…</string>
    <string name="statisticTextView">Statistic</string>
    <string name="numberOfGameTextView">Number of games</string>
    <string name="topTenScoreTextView"> Top 10 score </string>
    <string name="statisticButton">Statistics</string>
    <string name="unknownValue">\?</string>
    <string name="highestScoreLabel">Best</string>
    <string name="averageScoreLabel">Average</string>
    <string name="lowestScoreLabel">Worst</string>
    <string name="settingTextView">Settings</string>
    <string name="playerNameSettingTextView">Player name</string>
    <string name="playerColorSettingTextView">Player color</string>
    <string name="fullScreenSettingTextView">Full screen</string>
    <string name="aboutTextView">About</string>
    <string name="playerColorSettingSummary">Set your square color when you play</string>
    <string name="fullScreenSettingSummary">When you play</string>
    <string name="settingButton">Settings</string>
    <string name="gameVersion">Version 1.2</string>
    <string name="gameAuthor">From vbinhdev98 with love</string>
    <string name="howToPlayTextView">Swipe the screen to color all the squares to white color</string>
    <string name="howToPlayLabel">How to play ?</string>
    <string name="removeAllStatisticButton">Remove All</string>
    <string name="privacyPolicyButton">Privacy policy</string>
    <string name="classicGame6x6BoardHard">Classic - 6x6 (Hard)</string>
    <string name="classicGame8x8BoardHard">Classic - 8x8 (Hard)</string>
</resources>
