<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.GameSelectionActivity" android:orientation="vertical"
        android:id="@+id/gameSelectionView">

    <TextView
            android:text="@string/chooseYourGameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2"/>
    <Button
            android:text="@string/classicGame6x6Board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/classic6x6button"
            style="@style/Widget.AppCompat.Button.Borderless" android:background="@color/gameSelectionColor1"
            android:textSize="18sp"/>
    <Button
            android:text="@string/classicGame8x8Board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/classic8x8button"
            style="@style/Widget.AppCompat.Button.Borderless" android:background="@color/gameSelectionColor2"
            android:textSize="18sp"/>
</LinearLayout>