<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GameStatisticActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/statisticTextView"
        android:textColor="@color/appNameColor"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameModeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/loadingText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView105"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/numberOfGameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameModeTextView" />

    <TextView
        android:id="@+id/numberOfGamesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/appNameColor"
        android:text="@string/unknownValue"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView105" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfGamesTextView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView107"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/highestScoreLabel"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView108"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/averageScoreLabel"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView109"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lowestScoreLabel"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bestScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/squareDefaultValue"
                android:textAlignment="center"
                android:textColor="@color/squareColorBlue"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/averageScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/squareDefaultValue"
                android:textAlignment="center"
                android:textColor="@color/appNameColor"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/worstScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/squareDefaultValue"
                android:textAlignment="center"
                android:textColor="@color/squareColorRed"
                android:textSize="30sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView113"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/topTenScoreTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/highScoreTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView113">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView114"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unknownValue"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="@string/unknownValue" />

            <TextView
                android:id="@+id/textView115"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unknownValue"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="@string/unknownValue" />

            <TextView
                android:id="@+id/textView116"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unknownValue"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="@string/unknownValue" />

            <TextView
                android:id="@+id/textView117"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unknownValue"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="@string/unknownValue" />

            <TextView
                android:id="@+id/textView118"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unknownValue"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="@string/unknownValue" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView119"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unknownValue"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="@string/unknownValue" />

            <TextView
                android:id="@+id/textView120"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unknownValue"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="@string/unknownValue" />

            <TextView
                android:id="@+id/textView121"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unknownValue"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="@string/unknownValue" />

            <TextView
                android:id="@+id/textView122"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unknownValue"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="@string/unknownValue" />

            <TextView
                android:id="@+id/textView123"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unknownValue"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="@string/unknownValue" />
        </TableRow>

    </TableLayout>

    <!-- Sample AdMob ID: ca-app-pub-3940256099942544/6300978111 -->
    <!-- real AdMob ID: "ca-app-pub-1462197611933020/2799413146" -->

    <Button
        android:id="@+id/removeStatisticButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="top|end"
        android:text="@string/removeAllStatisticButton"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highScoreTable" />

</androidx.constraintlayout.widget.ConstraintLayout>